--- a/podpinacz_dialog_base.ui
+++ b/podpinacz_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>401</width>
-    <height>327</height>
+    <width>383</width>
+    <height>378</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>270</y>
+     <y>340</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -39,6 +39,13 @@
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>Jakie grupy zawiera warstwa?</string>
+      </property>
+     </widget>
+    </item>
     <item>
      <widget class="QRadioButton" name="ptaki">
       <property name="text">
@@ -66,18 +73,95 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>130</y>
+     <y>260</y>
      <width>361</width>
-     <height>131</height>
+     <height>76</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
     <item>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Lokalizacja pliku wyjściowego</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QgsFileWidget" name="output_path">
+      <property name="fileWidgetButtonVisible">
+       <bool>true</bool>
+      </property>
+      <property name="fullUrl">
+       <bool>false</bool>
+      </property>
+      <property name="dialogTitle">
+       <string>Lokalizacja pliku wynikowego</string>
+      </property>
+      <property name="filter">
+       <string>*.shp</string>
+      </property>
       <property name="storageMode">
        <enum>QgsFileWidget::SaveFile</enum>
       </property>
      </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>130</y>
+     <width>361</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="data">
+    <item>
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Domyślna data</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QDateEdit" name="dateEdit">
+      <property name="contextMenuPolicy">
+       <enum>Qt::DefaultContextMenu</enum>
+      </property>
+      <property name="wrapping">
+       <bool>true</bool>
+      </property>
+      <property name="buttonSymbols">
+       <enum>QAbstractSpinBox::NoButtons</enum>
+      </property>
+      <property name="accelerated">
+       <bool>false</bool>
+      </property>
+      <property name="showGroupSeparator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="calendarPopup">
+       <bool>true</bool>
+      </property>
+      <property name="date">
+       <date>
+        <year>2021</year>
+        <month>4</month>
+        <day>1</day>
+       </date>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Autor obserwacji</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="autor"/>
     </item>
    </layout>
   </widget>
